# paptools

./: .gitattributes  .gitignore  LICENSE  README.md  example.ipynb  main.ipynb  pyproject.toml  test.ipynb
.github/workflows/: pypi.yml  testpypi.yml
paptools/: __init__.py
paptools/constants/: math.py  physics.py
paptools/core/: array.py  number.py
paptools/statistics/: tests.py
paptools/validators/: input.py
